# ftgo-rust

./: .dockerignore  .env.dist  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: deploy-image.yaml
ftgo-accounting-service/: .env.dist  Cargo.toml  diesel.toml
ftgo-accounting-service/migrations/2025-03-13-004629_create_projections/: down.sql  up.sql
ftgo-accounting-service/migrations/2025-07-09-163806_create_events/: down.sql  up.sql
ftgo-accounting-service/migrations/2025-07-09-165857_create_checkpoint/: up.sql
ftgo-accounting-service/src/: lib.rs  main.rs  models.rs  schema.rs  service.rs  store.rs
ftgo-accounting-service/src/aggregate/: account.rs
ftgo-accounting-service/src/app/: consumer.rs  mod.rs  producer.rs  projector.rs  rpc.rs
ftgo-accounting-service/src/projection/: account_details.rs  account_infos.rs  mod.rs  schema.rs
ftgo-accounting-service/src/store/: account.rs  checkpoint.rs  event.rs  mod.rs
ftgo-api-gateway/: .env.dist  Cargo.toml
ftgo-api-gateway/src/: error.rs  handlers.rs  main.rs  models.rs
ftgo-api-gateway/src/handlers/: accounting.rs  auth.rs  consumer.rs  delivery.rs  kitchen.rs  mod.rs  order.rs  restaurant.rs
ftgo-auth-service/: .env.dist  Cargo.toml
ftgo-auth-service/migrations/2025-07-06-151003_init/: down.sql  up.sql
ftgo-auth-service/src/: lib.rs  main.rs  models.rs  schema.rs
ftgo-auth-service/src/app/: rpc.rs
ftgo-consumer-service/: .env.dist  Cargo.toml
ftgo-consumer-service/migrations/2025-03-09-035124_create_consumers/: down.sql  up.sql
ftgo-consumer-service/migrations/2025-03-09-050423_create_outbox/: up.sql
ftgo-consumer-service/src/: events.rs  lib.rs  main.rs  models.rs  schema.rs
ftgo-consumer-service/src/app/: consumer.rs  mod.rs  producer.rs  rpc.rs
ftgo-delivery-service/: .env.dist  Cargo.toml
ftgo-delivery-service/migrations/2025-03-11-200235_create_courier/: down.sql  up.sql
ftgo-delivery-service/migrations/2025-03-11-200935_create_delivery/: down.sql  up.sql
ftgo-delivery-service/migrations/2025-03-11-200942_create_courier_actions/: down.sql  up.sql
ftgo-delivery-service/src/: events.rs  lib.rs  models.rs  schema.rs
ftgo-delivery-service/src/app/: consumer.rs  producer.rs  rpc.rs
ftgo-kitchen-service/: .env.dist  Cargo.toml
ftgo-kitchen-service/migrations/2025-03-09-041947_create_restaurants/: up.sql
ftgo-kitchen-service/migrations/2025-03-09-042117_create_tickets/: down.sql  up.sql
ftgo-kitchen-service/src/: events.rs  lib.rs  models.rs  schema.rs
ftgo-kitchen-service/src/app/: consumer.rs  producer.rs  rpc.rs
ftgo-order-service/: .env.dist  Cargo.toml
ftgo-order-service/migrations/2025-03-14-154729_create_restaurants/: down.sql  up.sql
ftgo-order-service/migrations/2025-03-14-155127_create_orders/: down.sql  up.sql
ftgo-order-service/migrations/2025-07-04-122004_create_saga_instances/: down.sql  up.sql
ftgo-order-service/migrations/2025-07-09-003401_add_created_at_to_orders/: down.sql  up.sql
ftgo-order-service/src/: command_handlers.rs  events.rs  lib.rs  main.rs  models.rs  schema.rs  serializer.rs
ftgo-order-service/src/app/: consumer.rs  producer.rs  rpc.rs
ftgo-order-service/src/proxy/: accounting_service.rs  consumer_service.rs  kitchen_service.rs  mod.rs  order_service.rs
ftgo-order-service/src/saga/: create_order.rs  mod.rs
ftgo-proto/: Cargo.toml  build.rs
ftgo-proto/proto/: accounting.proto  auth.proto  command.proto  consumers.proto  deliveries.proto  kitchens.proto  money.proto  orders.proto  restaurants.proto
ftgo-proto/src/: lib.rs
ftgo-restaurant-service/: .env.dist  Cargo.toml
ftgo-restaurant-service/migrations/2025-03-08-053630_create_restaurants/: up.sql
ftgo-restaurant-service/src/: events.rs  lib.rs  main.rs  models.rs  schema.rs
ftgo-restaurant-service/src/app/: mod.rs  producer.rs  rpc.rs
