[package]
name = "ftgo-accounting-service"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = "0.4.7"
chrono = "0.4"
dotenvy = "0.15"
diesel = { version = "2.2.0", features = ["numeric", "uuid"] }
diesel-async = { version = "0.5.2", features = [
    "postgres",
    "async-connection-wrapper",
] }
diesel_migrations = "2.2.0"
eventstore = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.15.1", features = ["v4", "fast-rng", "serde"] }

kafka = "0.10"

tonic = "*"
tonic-health = "0.12.3"
prost = "0.13"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }

ftgo-proto = { path = "../ftgo-proto" }

[[bin]]
name = "rpc"
path = "src/bin/rpc.rs"

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"

[[bin]]
name = "producer"
path = "src/bin/producer.rs"

[[bin]]
name = "projector"
path = "src/bin/projector.rs"
