[package]
name = "ftgo-accounting-service"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
bigdecimal = "0.4.7"
chrono = "0.4"
dotenvy = "0.15"
diesel = { version = "2.2.0", features = ["numeric", "uuid"] }
diesel-async = { version = "0.5.2", features = [
    "postgres",
    "async-connection-wrapper",
] }
diesel_migrations = "2.2.0"
eventstore = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.15.1", features = ["v4", "fast-rng", "serde"] }

kafka = "0.10"

tonic = "0.13.1"
tonic-health = "0.13.1"
prost = "0.13"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }

ftgo-proto = { path = "../ftgo-proto" }
