[package]
name = "ftgo-auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
chrono = "0.4"
diesel = { version = "2.2.0", features = ["postgres", "chrono", "uuid"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15"
uuid = { version = "1.15.1", features = ["v4", "fast-rng", "serde"] }
tonic = "0.13.1"
tonic-health = "0.13.1"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
ftgo-proto = { path = "../ftgo-proto" }
password-hash = { version = "0.5.0", features = ["getrandom"] }

[[bin]]
name = "rpc"
path = "src/bin/rpc.rs"
