[package]
name = "ftgo-delivery-service"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15"
uuid = { version = "1.15.1", features = ["v4", "fast-rng", "serde"] }

tonic = "*"
tonic-health = "0.12.3"
prost = "0.13"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }

ftgo-proto = { path = "../ftgo-proto" }

[[bin]]
name = "rpc"
path = "src/bin/rpc.rs"
