[package]
name = "ftgo-delivery-service"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
chrono = "0.4"
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15"
uuid = { version = "1.15.1", features = ["v4", "fast-rng", "serde"] }
rand = "0.9"

tonic = "0.13.1"
tonic-health = "0.13.1"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }

kafka = "0.10"

ftgo-proto = { path = "../ftgo-proto" }
