[package]
name = "ftgo-order-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bigdecimal = { version = "0.4.7", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.0", features = [
    "postgres",
    "numeric",
    "uuid",
    "chrono",
    "serde_json",
] }
diesel_migrations = "2.2.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.15.1", features = ["v4", "fast-rng", "serde"] }

kafka = "0.10"

tonic = "0.13.1"
tonic-health = "0.13.1"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }

ftgo-proto = { path = "../ftgo-proto" }

[[bin]]
name = "rpc"
path = "src/bin/rpc.rs"

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"

[[bin]]
name = "producer"
path = "src/bin/producer.rs"
